RESOLVED FIXED124688
REGRESSION(159395) Fix branch8(…, AbsoluteAddress, …) in ARM64 MacroAssembler
https://bugs.webkit.org/show_bug.cgi?id=124688
Summary REGRESSION(159395) Fix branch8(…, AbsoluteAddress, …) in ARM64 MacroAssembler
Michael Saboff
Reported 2013-11-20 16:27:31 PST
Since http://trac.webkit.org/changeset/159395, ARM64 build won't compile due to broken implementation of branch8(RelationalCondition cond, AbsoluteAddress left, TrustedImm32 right). The load8() of the AbsoluteAddress needs to be handle differently.
Attachments
Patch (1.48 KB, patch)
2013-11-21 16:13 PST, Michael Saboff
ggaren: review+
Michael Saboff
Comment 1 2013-11-21 16:13:58 PST
Geoffrey Garen
Comment 2 2013-11-21 16:17:05 PST
Comment on attachment 217623 [details] Patch r=me
Michael Saboff
Comment 3 2013-11-21 16:29:34 PST
Note You need to log in before you can comment on or make changes to this bug.