REGRESSION(159395) Fix branch8(…, AbsoluteAddress, …) in ARM64 MacroAssembler https://bugs.webkit.org/show_bug.cgi?id=124688

Reviewed by Geoffrey Garen.

Changed handling of the address for the load8() in the branch8(AbsoluteAddress) to be like
the rest of the branchXX(AbsoluteAddress) fucntions.

* assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::branch8):


Canonical link: https://commits.webkit.org/142907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159653 268f45cc-cd09-0410-ab3c-d52691b4dbfc